# NTRTsim

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  NOTICE  README.md  ntrtConfig.cmake.in  setup.sh
docs/: CMakeLists.txt  Doxyfile
examples/apps/: CMakeLists.txt
examples/apps/3_prism/: AppPrismModel.cpp  CMakeLists.txt  PrismModel.cpp  PrismModel.h
examples/apps/3_prism_serialize/: AppPrismModel.cpp  CMakeLists.txt  PrismModel.cpp  PrismModel.h
examples/apps/IROS_2015/: CMakeLists.txt
examples/apps/NestedTetrahedrons/: AppNestedTetrahedrons.cpp  CMakeLists.txt  NestedStructureSineWaves.cpp  NestedStructureSineWaves.h  NestedStructureTestModel.cpp  NestedStructureTestModel.h
examples/apps/SUPERball/: AppSUPERball.cpp  CMakeLists.txt  T6Model.cpp  T6Model.h
examples/apps/contactCables/: AppContactCables.cpp  AppTetraSpineCol.cpp  CMakeLists.txt  ContactCableDemo.cpp  ContactCableDemo.h  TetraSpineCollisions.cpp  TetraSpineCollisions.h  colSpineSine.cpp  colSpineSine.h
examples/apps/craterEscape/: AppEscape.cpp  CMakeLists.txt  EscapeController.cpp  EscapeController.h  EscapeModel.cpp  EscapeModel.h
examples/apps/learningSpines/: BaseSpineCPGControl.cpp  BaseSpineCPGControl.h  BaseSpineModelLearning.cpp  BaseSpineModelLearning.h  CMakeLists.txt  KinematicSpineCPGControl.cpp  KinematicSpineCPGControl.h  SpineFeedbackControl.cpp  SpineFeedbackControl.h  tgCPGActuatorControl.cpp  tgCPGActuatorControl.h  tgCPGCableControl.cpp  tgCPGCableControl.h  tgCPGLogger.cpp  tgCPGLogger.h  tgSCASineControl.cpp  tgSCASineControl.h
examples/apps/motorModel/: AppTimestepTest.cpp  CMakeLists.txt  tsTestRig.cpp  tsTestRig.h
examples/apps/testjson/: CMakeLists.txt  testjson.cpp
examples/dev/: CMakeLists.txt
examples/dev/apsabelhaus/: CMakeLists.txt
examples/dev/atil/: AppSUPERball.cpp  CMakeLists.txt  SuperBallLearningController.cpp  SuperBallLearningController.h  SuperBallModel.cpp  SuperBallModel.h  heightSensor.h
examples/dev/axydes/: CMakeLists.txt
examples/dev/bgigous/: CMakeLists.txt
examples/dev/btietz/: CMakeLists.txt  NestedStructureTestModel_rb.h  tgRBString.cpp  tgRBString.h  tgRBStringInfo.cpp  tgRBStringInfo.h
examples/dev/dhustigschultz/: CMakeLists.txt
examples/dev/eajung/: CMakeLists.txt
examples/dev/ezhu/: CMakeLists.txt
examples/dev/jbruce/: CMakeLists.txt
examples/dev/kmorse/: AppSUPERball.cpp  CMakeLists.txt  T6Model.cpp  T6Model.h
examples/dev/mcdaly/: CMakeLists.txt
examples/dev/muscleNP/: CMakeLists.txt  tgGhostInfo.cpp  tgGhostInfo.h  tgGhostModel.cpp  tgGhostModel.h
examples/dev/radams/: CMakeLists.txt
examples/dev/steve/: CMakeLists.txt
examples/dev/tests/: AppBuilderTest.cpp  AppConnectorTest.cpp  AppHilbert2D.cpp  AppRBString.cpp  AppRotationTest.cpp  AppStructureTest.cpp  BuildTestController.h  BuildTestModel.h  CMakeLists.txt  ConnectorTestModel.h  Hilbert2DModel.h  RBStringTest.cpp  RBStringTest.h  StructureTestModel.h  testTgBuildSpec.cpp  testTgStructure.cpp  testTgStructureInfo.cpp
examples/dev/ultra-spine/: CMakeLists.txt
src/: CMakeLists.txt  NTRTConfig.cmake.in
src/controllers/: CMakeLists.txt  tgBasicController.cpp  tgImpedanceController.cpp  tgPIDController.cpp  tgTensionController.cpp
src/core/: CMakeLists.txt  abstractMarker.cpp  tgBaseRigid.cpp  tgBasicActuator.cpp  tgBox.cpp  tgBoxMoreAnchors.cpp  tgBulletCompressionSpring.cpp  tgBulletContactSpringCable.cpp  tgBulletRenderer.cpp  tgBulletSpringCable.cpp  tgBulletSpringCableAnchor.cpp  tgBulletUnidirComprSpr.cpp  tgBulletUtil.cpp  tgCompressionSpringActuator.cpp  tgKinematicActuator.cpp  tgModel.cpp  tgRod.cpp  tgSenseable.cpp  tgSimView.cpp  tgSimViewGraphics.cpp  tgSimulation.cpp  tgSphere.cpp  tgSpringCable.cpp  tgSpringCableActuator.cpp  tgUnidirComprSprActuator.cpp  tgWorld.cpp  tgWorldBulletPhysicsImpl.cpp
src/core/terrain/: CMakeLists.txt  tgBoxGround.cpp  tgBulletGround.cpp  tgCraterGround.cpp  tgEmptyGround.cpp  tgHillyGround.cpp  tgPlaneGround.cpp
src/helpers/: CMakeLists.txt
src/helpers/FileHelpers/: CMakeLists.txt  FileHelpers.cpp
src/learning/: CMakeLists.txt
src/learning/Adapters/: AnnealAdapter.cpp  CMakeLists.txt  NeuroAdapter.cpp
src/learning/AnnealEvolution/: AnnealEvoMember.cpp  AnnealEvoPopulation.cpp  AnnealEvolution.cpp  CMakeLists.txt
src/learning/Configuration/: CMakeLists.txt  configuration.cpp
src/learning/NeuroEvolution/: CMakeLists.txt  NeuroEvoMember.cpp  NeuroEvoPopulation.cpp  NeuroEvolution.cpp
src/models/: CMakeLists.txt
src/models/TensegrityModel/: BuildTensegrityModel.cpp  CMakeLists.txt  TensegrityModel.cpp  TensegrityModelController.cpp
src/models/obstacles/: AppObstacleTest.cpp  CMakeLists.txt  tgBlockField.cpp  tgCraterDeep.cpp  tgCraterShallow.cpp  tgStairs.cpp  tgWall.cpp
src/sensors/: CMakeLists.txt  tgCompoundRigidSensor.cpp  tgCompoundRigidSensorInfo.cpp  tgDataLogger.cpp  tgDataLogger2.cpp  tgDataManager.cpp  tgDataObserver.cpp  tgRodSensor.cpp  tgRodSensorInfo.cpp  tgSensor.cpp  tgSensorInfo.cpp  tgSpringCableActuatorSensor.cpp  tgSpringCableActuatorSensorInfo.cpp
src/tgOpenGLSupport/: CMakeLists.txt
src/tgcreator/: CMakeLists.txt  tgBasicActuatorInfo.cpp  tgBasicContactCableInfo.cpp  tgBoxInfo.cpp  tgBoxMoreAnchorsInfo.cpp  tgBuildSpec.cpp  tgCompoundRigidInfo.cpp  tgCompressionSpringActuatorInfo.cpp  tgConnectorInfo.cpp  tgKinematicActuatorInfo.cpp  tgKinematicContactCableInfo.cpp  tgNodes.cpp  tgPair.cpp  tgRigidAutoCompound.cpp  tgRigidInfo.cpp  tgRodInfo.cpp  tgSphereInfo.cpp  tgStructure.cpp  tgStructureInfo.cpp  tgUnidirComprSprActuatorInfo.cpp  tgUtil.cpp
src/util/: CMakeLists.txt  CPGEquations.cpp  CPGEquationsFB.cpp  CPGNode.cpp  CPGNodeFB.cpp  tgBaseCPGNode.cpp
test/tgcreator/: CMakeLists.txt  tgUtil_test.cpp
test/util/: CMakeLists.txt  CPGEquations_test.cpp
test_integration/ICRA2015Tests/: CMakeLists.txt  ICRA2015_test.cpp
test_integration/MuscleNP/: CMakeLists.txt  MuscleNP_test.cpp
test_integration/SpineTests/: CMakeLists.txt  WorldConf_Spines_test.cpp
test_integration/TimestepIndependence/: CMakeLists.txt  MotorTimestep_test.cpp
(+515 files in other folders)
