project(app_examples)

# Add additional example application directories here.
add_subdirectory(3_prism)
add_subdirectory(3_prism_serialize)
add_subdirectory(learningSpines)
add_subdirectory(contactCables)
add_subdirectory(NestedTetrahedrons)
add_subdirectory(SUPERball)
add_subdirectory(testjson)
add_subdirectory(craterEscape)
add_subdirectory(IROS_2015)
add_subdirectory(motorModel)
